# uptime-monitor

client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/components/: AlertsTab.tsx  Header.tsx  HistoryTab.tsx  MonitoringTable.tsx  OverviewCards.tsx  SettingsTab.tsx  ThemeToggle.tsx  URLsTab.tsx
client/app/components/ui/: button.tsx
client/app/dashboard/: page.tsx
client/app/login/: page.tsx
client/app/profile/: page.tsx
client/app/signup/: page.tsx
client/src/: App.tsx
client/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
client/src/components/dashboard/: Dashboard.tsx
client/src/components/home/: FeatureCard.tsx  Features.tsx  Hero.tsx
client/src/components/layout/: Navbar.tsx
client/src/store/: authStore.ts  themeStore.ts
client/src/types/: auth.ts
server/: .gitignore  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2812726207bb_initial_migration.py
server/app/: main.py
server/app/core/: auth.py  config.py  deps.py
server/app/db/: base.py  database.py  session.py
server/app/models/: base.py  monitor.py  user.py
server/app/repositories/: monitor.py  user.py
server/app/routers/: auth.py  monitor.py  user.py
server/app/schemas/: user_dto.py
server/app/services/: auth.py  monitor.py  user.py
